--- a/css/styles.css
+++ b/css/styles.css
@@ -561,7 +561,7 @@ body {
 }
 
 .soc-footer {
-  margin-right: 140px;
+  margin-right: 121px;
 }
 
 .footer-invite {
@@ -934,49 +934,58 @@ body {
 }
 
 .icomodal-svg {
-  position: absolute;
+ pointer;  position: absolute;
   left: 12px;
   transform: translateY(50%);
 }
 
-.checksbox-text {
+.modal-consent {
   display: flex;
   justify-content: center;
+}
+
+.modal-consent__label {
+  display: flex;
+  align-items: center;
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: #757575;
   cursor: pointer;
-  align-items: center;
 }
 
-.checksbox-text span {
+.modal-consent-svg {
+  width: 16px;
+  height: 15px;
+  border: 2px solid #232323;
+  border-radius: 2px;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 16px;
-  height: 15px;
-  border: 2px solid #212121;
-  border-radius: 2px;
-  margin-right: 7px;
-}
-
-.checkbox-vecto {
   fill: transparent;
+  margin-right: 9px;
 }
 
-.input-checkbox:checked + .checksbox-text span {
+.modal-consent__p {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7;
+  letter-spacing: 0.03em;
+  text-decoration-line: underline;
+  color: #2196f3;
+  margin-left: 3px;
+}
+
+.modal-consent__input:checked + .modal-consent__label span {
   background-color: var(--color-text-blue);
   border: none;
+  border-radius: 2px;
 }
 
-.input-checkbox:focus + .checksbox-text span {
-  border-color: var(--color-text-blue);
-}
-
-.input-checkbox:checked + .checksbox-text .checkbox-vector {
+.modal-consent__input:checked + .modal-consent__label .modal-consent-svg {
   fill: #ffffff;
+  border: none;
 }
 
 .visually-hidden {
@@ -991,19 +1000,3 @@ body {
   clip-path: inset(50%);
   margin: -1px;
 }
-
-/* .input-checkbox:checked + .checksbox-text::before {
-  background-color: var(--color-text-blue);
-  border: none;
-  background-image: url(/SVG/Vector.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.checksbox-text::before {
-  content: "";
-  width: 16px;
-  height: 15px;
-  border: 2px solid #212121;
-  border-radius: 2px;
-  margin-right: 7px;
-} */
