--- a/css/styles.css
+++ b/css/styles.css
@@ -840,6 +840,7 @@ body {
 
 .div-input-svg {
   position: relative;
+  margin-bottom: 10px;
 }
 
 .input-modal {
@@ -847,7 +848,6 @@ body {
   height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
-  margin-bottom: 10px;
   padding-left: 48px;
   outline: transparent;
   transition: border 250ms var(--timing-function);
@@ -953,6 +953,7 @@ body {
   letter-spacing: 0.03em;
   color: #757575;
   cursor: pointer;
+  padding: 0 0 0 0;
 }
 
 .modal-consent-svg {
@@ -975,6 +976,7 @@ body {
   text-decoration-line: underline;
   color: #2196f3;
   margin-left: 3px;
+  margin: 0;
 }
 
 .modal-consent__input:checked + .modal-consent__label span {
